src/test/ui/parser/unclosed_delim_mod.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/unclosed_delim_mod.rs:7:1
   |
LL |     Ok(Value {
   |       - unmatched opening delimiter begins here
LL |     }
LL | }
   | ^ mismatched closing delimiter

error: aborting due to previous error

